# numericplusplus

./: .gitignore  CMakeLists.txt  clean.sh  main.c  main.cpp  matrix.hpp
.cache/clangd/index/: main.cpp.B7885DF9969535FC.idx  matrix.hpp.0A0DCA714E03BA69.idx
.github/workflows/: cmake_test.yml
Headers/: matrix.hpp
damped_oscillator/: CMakeLists.txt  main.c  oscillator.c  oscillator.h
headers/: math_utils.h
include/: math_utils.h
include/numbers/: BigInt.hpp
scripts/: build.sh  clean.sh  run.sh
src/core/: math_utils.c
src/implementation/: math_utils.c
src/numbers/: BigInt.cpp
tests/: test_bigint.cpp  test_core.c
